<resources>
    <string name="app_name">YAHM</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_training">Training</string>
    <string name="title_activity_simulation">Simulation</string>
    <string name="show_map">Map</string>
    <string name="show_training">Training</string>
    <string name="show_simulation">Simulation</string>
    <string name="spotHole">Buca</string>
    <string name="spotBack">Dosso</string>
    <string name="roadJoint">Giunto</string>
    <string name="manHole">Tombino</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="fab_spot">Start spotting</string>
    <string name="road_scan_started">Road scan started…</string>
    <string name="road_scan_stopped">Road scan stopped.</string>
    <string name="mas2j">/it/unibo/yahm/client/project.mas2j</string>

    //Preferences keys
    <string name="VOLUME_STATE_KEY">VOLUME_STATE_KEY</string>
</resources>
