<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:id="@+id/showMap"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/show_map"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_map_24"
            app:iconSize="40dp"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/showTraining"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/show_training"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_menu_book_24"
            app:iconSize="40dp"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/showSimulation"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:text="@string/show_simulation"
            android:backgroundTint="@color/primaryColor"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            app:icon="@drawable/ic_baseline_build_24"
            app:iconSize="40dp"
            android:layout_marginHorizontal="5dp"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>